--- a/packages/babel-preset-react-app/package.json
+++ b/packages/babel-preset-react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babel-preset-react-app",
+  "name": "@ehyland/babel-preset-react-app",
   "version": "3.0.3",
   "description": "Babel preset used by Create React App",
   "repository": "facebookincubator/create-react-app",
