--- a/packages/eslint-config-react-app/package.json
+++ b/packages/eslint-config-react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-react-app",
+  "name": "@ehyland/eslint-config-react-app",
   "version": "2.0.1",
   "description": "ESLint configuration used by Create React App",
   "repository": "facebookincubator/create-react-app",
