--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ehyland/react-scripts",
+  "name": "@ehyland-org/react-scripts",
   "version": "1.0.15",
   "description": "Configuration and scripts for Create React App.",
   "repository": "facebookincubator/create-react-app",
