--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "lerna": "2.0.0",
   "version": "independent",
   "changelog": {
-    "repo": "facebookincubator/create-react-app",
+    "repo": "ehyland/create-react-app",
     "labels": {
       "tag: new feature": ":rocket: New Feature",
       "tag: breaking change": ":boom: Breaking Change",
@@ -15,5 +15,6 @@
   },
   "packages": [
     "packages/*"
-  ]
+  ],
+  "npmClientArgs": ["--access", "public"]
 }
