--- a/packages/create-react-app/package.json
+++ b/packages/create-react-app/package.json
@@ -30,5 +30,8 @@
     "tar-pack": "^3.4.0",
     "tmp": "0.0.31",
     "validate-npm-package-name": "^3.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
